--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
     "typescript": "^5.5.2",
     "vitest": "2.1.8",
     "wrangler": "^3.107.3"
+  },
+  "dependencies": {
+    "@langchain/anthropic": "^0.3.13",
+    "@langchain/core": "^0.3.38",
+    "@langchain/openai": "^0.4.2",
+    "hono": "^4.6.20",
+    "langchain": "^0.3.15",
+    "zod": "^3.24.1",
+    "zodex": "^0.18.2"
   }
 }
