--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
 	"compilerOptions": {
+		"paths": {
+			"@/*": ["./src/*"]
+		},
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 
 		/* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
@@ -14,9 +17,7 @@
 		/* Specify how TypeScript looks up a file from a given module specifier. */
 		"moduleResolution": "Bundler",
 		/* Specify type package names to be included without being referenced in a source file. */
-		"types": [
-			"@cloudflare/workers-types/2023-07-01"
-		],
+		"types": ["@cloudflare/workers-types/2023-07-01"],
 		/* Enable importing .json files */
 		"resolveJsonModule": true,
 
