--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "bernstein",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "test": "vitest",
-    "cf-typegen": "wrangler types"
-  },
-  "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.6.4",
-    "@cloudflare/workers-types": "^4.20250204.0",
-    "typescript": "^5.5.2",
-    "vitest": "2.1.8",
-    "wrangler": "^3.107.3"
-  },
-  "dependencies": {
-    "@langchain/anthropic": "^0.3.13",
-    "@langchain/core": "^0.3.38",
-    "@langchain/openai": "^0.4.2",
-    "hono": "^4.6.20",
-    "langchain": "^0.3.15",
-    "zod": "^3.24.1",
-    "zodex": "^0.18.2"
-  }
+	"name": "bernstein",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev",
+		"start": "wrangler dev",
+		"test": "vitest",
+		"cf-typegen": "wrangler types",
+		"linkprod": "npx supabase link --project-ref xhxexkminnfpyuwhnupa",
+		"dbreset": "npx supabase db reset --linked",
+		"gendbtypes": "npx supabase gen types typescript --project-id \"xhxexkminnfpyuwhnupa\" --schema public > database.types.ts"
+	},
+	"devDependencies": {
+		"@cloudflare/vitest-pool-workers": "^0.6.4",
+		"@cloudflare/workers-types": "^4.20250204.0",
+		"typescript": "^5.5.2",
+		"vitest": "2.1.8",
+		"wrangler": "^3.107.3"
+	},
+	"dependencies": {
+		"@langchain/anthropic": "^0.3.13",
+		"@langchain/core": "^0.3.38",
+		"@langchain/openai": "^0.4.2",
+		"@supabase/supabase-js": "^2.48.1",
+		"hono": "^4.6.20",
+		"langchain": "^0.3.15",
+		"zod": "^3.24.1",
+		"zodex": "^0.18.2"
+	}
 }
